# socialhome-client

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md  principles.md  testing.md
pysocialhome_client/: __init__.py  client.py  ws_manager.py
socialhome_client/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_models.py  test_ws_manager.py
