[project]
name = "pysocialhome-client"
dynamic = ["version"]
description = "Async HTTP + WebSocket client for Social Home, used by the Home Assistant integration."
requires-python = ">=3.13"
# Kept at Python 3.13 (not 3.14) for Home Assistant compatibility —
# HA Core runs on 3.13 and imports this library directly.
license = {text = "Mozilla Public License 2.0"}
license-files = ["LICENSE"]
readme = "README.md"
authors = [{name = "Pascal Vizeli", email = "pascal.vizeli@nabucasa.com"}]
keywords = ["social-home", "home-assistant", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "aioresponses>=0.7",
    "mypy>=1.10",
    "ruff>=0.8",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/social-home-io/pysocialhome-client"
Repository = "https://github.com/social-home-io/pysocialhome-client"
Issues = "https://github.com/social-home-io/pysocialhome-client/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# CalVer versioning driven by git tags (no ``v`` prefix — tags look
# like ``2026.4.22`` or ``2026.4.22.1``). ``hatch-vcs`` reads the
# latest tag on build and writes it into ``_version.py``.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pysocialhome_client/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pysocialhome_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pysocialhome_client"]

[tool.coverage.report]
# Coverage for the low-level helpers and the reconnect loop is
# exercised by the behavioural tests; bump this floor as the library
# grows.
fail_under = 85

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # import sorting
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["pysocialhome_client"]
